# distributed_random_forest

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements.txt  run_exp1_hparams.py  run_exp2_clients.py  run_exp3_federation.py  run_exp4_dp_federation.py
.github/workflows/: ci.yml  docs.yml  publish.yml  tests.yml
distributed_random_forest/: __init__.py  cli.py  parallelism.py
distributed_random_forest/datasets/: __init__.py  public.py
distributed_random_forest/distributed/: __init__.py  orchestrator.py  partitioning.py
distributed_random_forest/experiments/: exp1_hparams.py  exp2_clients.py  exp3_global_rf.py  exp4_dp_rf.py
distributed_random_forest/federation/: __init__.py  aggregator.py  voting.py
distributed_random_forest/models/: __init__.py  dp_rf.py  random_forest.py  tree_utils.py
docs/: api.md  architecture.md  changelog.md  citing.md  concepts.md  distributed-strategies.md  examples.md  getting-started.md  index.md  operations.md  patterns.md  pipeline.md  repository.md
docs/stylesheets/: extra.css
examples/: basic_federated_training.py  benchmark_public_dataset.py  dp_enterprise_workflow.py  non_iid_dirichlet.py  performance_benchmark.py
experiments/: __init__.py  exp1_hparams.py  exp2_clients.py  exp3_global_rf.py  exp4_dp_rf.py
federation/: __init__.py  aggregator.py  voting.py
models/: __init__.py  dp_rf.py  random_forest.py
tests/: __init__.py  conftest.py  test_aggregator.py  test_cli.py  test_datasets.py  test_dp_rf.py  test_e2e.py  test_e2e_public_dataset.py  test_examples_run.py  test_extended_aggregation.py  test_orchestrator.py  test_parallel_e2e.py  test_parallel_stress.py  test_parallelism.py  test_partitioning.py  test_performance.py  test_random_forest.py  test_string_labels.py  test_tree_utils.py  test_voting.py  timing.py
