[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributed-random-forest"
version = "0.3.0"
description = "Enterprise-ready distributed and federated Random Forests with orchestration, strategy search, and optional differential privacy"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Bowen Song" }
]
maintainers = [
    { name = "Bowen Song" }
]
keywords = [
    "machine-learning",
    "random-forest",
    "federated-learning",
    "differential-privacy",
    "distributed-computing",
    "health-ai",
    "explainable-ai",
    "scalable-ml-systems",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.23.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
drf-quickstart = "distributed_random_forest.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.11.0",
    "twine>=6.1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
privacy = [
    "diffprivlib>=0.6.0",
]

[project.urls]
Homepage = "https://bowenislandsong.github.io/#/personal"
Author = "https://bowenislandsong.github.io/#/personal"
Personal_Site = "https://bowenislandsong.github.io/#/personal"
CV = "https://bowenislandsong.github.io/img/resume/Bowen_Song_Resume.pdf"
ORCID = "https://orcid.org/0000-0002-5071-3880"
Repository = "https://github.com/Bowenislandsong/distributed_random_forest"
Issues = "https://github.com/Bowenislandsong/distributed_random_forest/issues"
Documentation = "https://bowenislandsong.github.io/distributed_random_forest/"
Changelog = "https://github.com/Bowenislandsong/distributed_random_forest/releases"

[tool.setuptools.packages.find]
include = ["distributed_random_forest*"]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]
